--- a/index.Rmd
+++ b/index.Rmd
@@ -26,6 +26,7 @@ If you would like to receive e-mail announcements of upcoming events please send
 
 # News on this site
 
+* 2022/11/15: Added final announcement of [Next Generation Networking Seminar (Nov 30, 2022)](events_upcoming.html).
 * 2022/10/24: Added 1st announcements of [Next Generation Networking Seminar (Nov 30, 2022), and Good Software Engineering Practice for R Packages (Feb 10, 2023)](events_upcoming.html).
 * 2022/10/04: Added 1st announcement of [two EFSPI & BBS virtual events (Dec 8 & 15, 2022) on "Addressing intercurrent events: Treatment policy and hypothetical strategies"](events_upcoming.html).
 * 2022/09/19: Added final version of material of BBS course [Advanced group-sequential and adaptive confirmatory clinical trial designs, with R practicals using rpact](trainings/20220913/20220913_gsd_adaptive.html).
