--- a/upcoming/20230412/20230412_analysis.Rmd
+++ b/upcoming/20230412/20230412_analysis.Rmd
@@ -92,15 +92,16 @@ text(x = xx, y = t2, label = paste(t2, " (", round(100 * t2 / sum(t2)), "%)", se
  
 # Registrations of regulatory colleagues
 
-```{r, echo = FALSE, fig.cap = "", fig.align = "center", fig.width = 7, fig.height = 6}
+```{r, echo = FALSE, fig.cap = "", fig.align = "center", fig.width = 7, fig.height = 10}
 cut <- 0
 t2 <- with(filter(reg2, type == "Regulator"), table(inst2))
 t2 <- prepTable(t2 = t2, cut = cut)
 
 par(las = 2, mar = c(21, 4.5, 3, 1))
 ylim <- c(0, 1.4 * max(t2))
-xx <- barplot(t2, ylab = "number of registrations", main = paste("Total number of registrations: ", dim(reg2)[1], "\n institution", sep = ""), col = 4, ylim = ylim)
-text(x = xx, y = t2, label = paste(t2, " (", round(100 * t2 / sum(t2)), "%)", sep = ""), pos = 3, offset = 2, cex = 0.8, col = 1, srt = 90)
+xx <- barplot(t2, ylab = "number of registrations", main = paste("Total number of registrations: ", dim(reg2)[1], "\n regulatory colleagues", sep = ""), col = 4, ylim = ylim, yaxt = "n")
+axis(2, at = 0:100, labels = 0:100)
+text(x = xx, y = t2, label = paste(t2, " (", round(100 * t2 / sum(t2)), "%)", sep = ""), pos = 3, offset = 1, cex = 0.8, col = 1)
 ```
 
 # Registrations by countries
