--- a/updates.qmd
+++ b/updates.qmd
@@ -10,6 +10,8 @@ output:
     toc_float: yes
 ---
 
+* 2023/10/02: Added materials of an amazing training [Good Software Engineering
+Practice for R Packages](https://kkmann.github.io/workshop-r-swe/).
 * 2023/01/17: Added announcement of workshop [Adaptive Designs and Multiple Testing Procedures Workshop](https://baselbiometrics.github.io/home/docs/events_upcoming.html).
 * 2023/01/09: Added announcement of seminar [Quantification of risk: ask the right questions or
 time to apply the estimand framework to safety!](https://baselbiometrics.github.io/home/docs/events_upcoming.html).
