--- a/tools/seminars1.Rmd
+++ b/tools/seminars1.Rmd
@@ -4,19 +4,7 @@
 i <- as.numeric('{{i}}')
 tab <- filter(talks, date == dates[i])
 meta <- tab[1, ]
-```
 
-# `r paste(as.character(meta$date), ": ", meta$seminar_title, sep = "")` {-} 
-
-`r if ("agenda.pdf" %in% list.files(paste("talks/", rdate[i], "/", sep = ""))){paste("[Agenda](talks/", rdate[i], "/agenda.pdf)", sep = "")} else {"No agenda available"}`
-
-`r if (is.na(select(meta, recording)) == FALSE){paste("[Recording](", select(meta, recording)[, 1], ")", sep = "")} else {"No recording available"}`
-
-`r if (is.na(select(meta, recording2)) == FALSE){paste("[Recording 2](", select(meta, recording2)[, 1], ")", sep = "")}`
-
-`r if (is.na(select(meta, summary)) == FALSE){paste("[Summary of the event](", select(meta, summary), ")", sep = "")}`
-
-```{r echo = FALSE}
 links <- paste("[link](talks/", rdate[i], "/", select(tab, slides)[, 1], ")", sep = "")
 
 # replace template links by external-pointing links, if available
@@ -32,8 +20,16 @@ tab2[ind, "Download slides"] <- "No presentation available (may be added later f
 
 # replace other empty entries
 tab2[is.na(tab2)] <- ""
-
-if (is.na(meta$speaker) == FALSE){kable(tab2)}
 ```
 
-`r if (is.na(meta$speaker)){"No slides available"}`
+# `r paste(as.character(meta$date), ": ", meta$seminar_title, sep = "")` {-} 
+
+`r if ("agenda.pdf" %in% list.files(paste("talks/", rdate[i], "/", sep = ""))){paste("[Agenda](talks/", rdate[i], "/agenda.pdf)", sep = "")} else {"No agenda available"}`
+
+`r if (is.na(select(meta, recording)) == FALSE){paste("[Recording](", select(meta, recording)[, 1], ")", sep = "")} else {"No recording available"}`
+
+`r if (is.na(select(meta, recording2)) == FALSE){paste("[Recording 2](", select(meta, recording2)[, 1], ")", sep = "")} else {""}`
+
+`r if (is.na(select(meta, summary)) == FALSE){paste("[Summary of the event](", select(meta, summary), ")", sep = "")} else {""}` 
+
+`r if (is.na(meta$speaker) == FALSE){kable(tab2)} else {"No slides available"}`
