--- a/trainings/20230903/BBSadaptiveCourse03Sep2023_exercises.qmd
+++ b/trainings/20230903/BBSadaptiveCourse03Sep2023_exercises.qmd
@@ -24,7 +24,7 @@ All materials related to this course are available on the [BBS](http://www.bbsba
 # Getting started {-}
 
 - Make sure that you have the latest version of `rpact` installed.
-- Download the raw R markdown exercise file by clicking on the "code" block of the right upper corner [here](https://baselbiometrics.github.io/home/docs/trainings/20230903/BBSadaptiveCourse03Sep2023_exercises.html).
+- [Download](BBSadaptiveCourse03Sep2023_exercises.zip) the raw R markdown exercise file (as .zip file). [here](https://baselbiometrics.github.io/home/docs/trainings/20230903/BBSadaptiveCourse03Sep2023_exercises.html).
 - Start up your local Rstudio installation. Then open the R markdown exercise file.
 - Start answering the questions below by adding text or your own `R` code to the R markdown file. Use the `rpact` help for guidance.
 
