--- a/updates.qmd
+++ b/updates.qmd
@@ -10,8 +10,9 @@ output:
     toc_float: yes
 ---
 
+* 2023/08/29: Uploaded 2nd announcement for webinar [Pre-approval and Post-approval Challenges in the Clinical Development and Reimbursement of CAR-T Cell Therapies](https://baselbiometrics.github.io/home/docs/events_upcoming.html).
 * 2023/08/08: Added first announcement for [BBS Annual Meeting: Federated learning and new data modalities](https://baselbiometrics.github.io/home/docs/events_upcoming.html).
-* 2023/07/21: Added further slidedecks to [NextGen seminar](https://baselbiometrics.github.io/home/docs/events_past.html#next-generation-event-on-soft-skills-professional-development-and-networking). 
+* 2023/07/21: Added further slidedecks to [NextGen seminar](https://baselbiometrics.github.io/home/docs/events_past.html#next-generation-event-on-soft-skills-professional-development-and-networking).
 * 2023/07/05: Uploaded 1st announcement and registration link for (free) webinar [Pre-approval and Post-approval Challenges in the Clinical Development and Reimbursement of CAR-T Cell Therapies](https://baselbiometrics.github.io/home/docs/events_upcoming.html). Added Kaspar Rufibach's slidedeck to [NextGen seminar](https://baselbiometrics.github.io/home/docs/events_past.html#next-generation-event-on-soft-skills-professional-development-and-networking).
 * 2023/05/23: Uploaded agenda and registration link for workshop [Estimands in Early Development (ED) across Therapeutic Areas](https://baselbiometrics.github.io/home/docs/events_past.html#next-generation-event-on-soft-skills-professional-development-and-networking).
 * 2023/05/02: Uploaded agenda and registration link for seminar [Next Generation event on soft-skills, professional development, and networking](https://baselbiometrics.github.io/home/docs/events_upcoming.html).
