--- a/trainings/20230903/20230903_gsd_adaptive.qmd
+++ b/trainings/20230903/20230903_gsd_adaptive.qmd
@@ -1,5 +1,6 @@
 ---
 title: "Advanced group-sequential and adaptive confirmatory clinical trial designs, with R practicals using rpact"
+date: 2023-09-03
 format:
   html:
     toc: true
